# data-lakehouse-ingest

./: .gitignore  Dockerfile  README.md  pyproject.toml  tutorial-config-json.md
.github/workflows/: build_publish_scan_managed.yml  codeql.yml  tests.yml
scripts/: run_tests.sh
src/data_lakehouse_ingest/: __init__.py  config_loader.py  core.py  logger.py  minio_utils.py  spark_session.py
src/data_lakehouse_ingest/loaders/: csv_loader.py  dsv_loader.py  json_loader.py  parquet_loader.py  tsv_loader.py  xml_loader.py
src/data_lakehouse_ingest/orchestrator/: error_utils.py  init_utils.py  io_utils.py  models.py  schema_utils.py  table_batch_processor.py  table_processor.py
src/data_lakehouse_ingest/orchestrator/.ipynb_checkpoints/: table_processor-checkpoint.py
src/data_lakehouse_ingest/parsers/: uniprot.py  uniprot_ingest.py
src/data_lakehouse_ingest/utils/: delta_comments.py  json_encoder.py  linkml_parser.py  report_utils.py  uniprot_writer.py
src/dlh_ingest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_config_loader.py  test_core.py  test_linkml_parser.py  test_logger.py  test_uniprot_ingest.py  test_uniprot_writer.py
tests/loaders/: conftest.py  test_dsv_loader.py  test_json_loader.py  test_parquet_loader.py  test_xml_loader.py
tests/orchestrator/: test_error_utils.py  test_init_utils.py  test_io_utils.py  test_schema_utils.py  test_table_batch_processor.py  test_table_processor.py
tests/utils/: test_delta_comments.py  test_json_encoder.py  test_linkml_parser.py  test_report_utils.py
