[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_lakehouse_ingest"
version = "0.0.1"
description = "Minimal ingestion stub for CDMHUB/BERDLHUB notebooks"
authors = [{ name="CDM", email="amkhan@lbl.gov" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"

dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "coverage",
    "ruff>=0.11.5"
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W"] # minimal: pyflakes + pycodestyle
ignore = ["E501"]        # ignore line length, handled by line-length above