[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_lakehouse_ingest"
version = "0.0.4"
description = "Minimal ingestion stub for CDMHUB/BERDLHUB notebooks"
authors = [{ name="CDM", email="amkhan@lbl.gov" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "boto3>=1.34.0",
    "minio>=7.2.0",
    "linkml>=1.9.4",
    "linkml-runtime>=1.9.5",
    "linkml-validator>=0.4.5",
    "berdl-notebook-utils",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "coverage",
    "ruff>=0.11.5",
    "ipykernel"
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["F", "E", "W"] # minimal: pyflakes + pycodestyle
ignore = ["E501"]        # ignore line length, handled by line-length above

[tool.uv.sources]
berdl-notebook-utils = { git = "https://github.com/BERDataLakehouse/spark_notebook.git", subdirectory = "notebook_utils" }

# environment settings for running tests
[tool.pytest_env]
USER = "fake_user"
KBASE_AUTH_TOKEN = "test-token-123"
CDM_TASK_SERVICE_URL = "http://localhost:8080"
MINIO_ENDPOINT_URL = "http://localhost:9000"
MINIO_ACCESS_KEY = "minioadmin"
MINIO_SECRET_KEY = "minioadmin"
MINIO_SECURE_FLAG = "false"
BERDL_POD_IP = "192.168.1.100"
SPARK_MASTER_URL = "spark://localhost:7077"
BERDL_HIVE_METASTORE_URI = "thrift://localhost:9083"
SPARK_CLUSTER_MANAGER_API_URL = "http://localhost:8000"
GOVERNANCE_API_URL = "http://localhost:8000"
DATALAKE_MCP_SERVER_URL = "http://localhost:8080"